...
      padding: const EdgeInsets.all(8.0),
      child: SingleChildScrollView(
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            _tvSubHeading(
              title: 'Airing Today',
              onTap: () {
                Navigator.pushNamed(context, AiringTodayTVsPage.routeName);
              },
            ),
            Consumer<TVListNotifier>(
              builder: (_, data, _) {
...
